# previsor-preco-pilates

./: README.md
Previsor-Precos-Pilates/: Previsor-Precos.py  precos-pilates.csv  pyproject.toml
