[tool.poetry]
name = "previsor-precos-pilates"
version = "0.1.0"
description = ""
authors = ["Vinicius Santiago <vfgsantiago@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
